Add CORS configuration properties and refactor SecurityConfig to use them